--- a/package.json
+++ b/package.json
@@ -6,14 +6,11 @@
   "author": "lgcolella",
   "license": "MIT",
   "dependencies": {
-    "css-loader": "^0.28.11",
     "electron": "^1.8.4",
     "react": "^16.3.0",
-    "react-dom": "^16.3.0",
-    "style-loader": "^0.20.3"
+    "react-dom": "^16.3.0"
   },
   "scripts": {
-    "postinstall": "cd ./src && npm i sqlite3 && cd ../ && node ./node_modules/electron-rebuild/lib/src/cli.js -m ./src/node_modules/sqlite3git status",
     "dev": "node ./node_modules/concurrently/src/main.js \"npm run dev:main\" \"npm run dev:app\"",
     "dev:full": "node ./node_modules/concurrently/src/main.js \"npm run dev\" \"npm run sass:watch\"",
     "dev:rebuild": "npm run build && npm run dev",
@@ -41,6 +38,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "concurrently": "^3.5.1",
+    "css-loader": "^0.28.11",
     "electron-packager": "^12.0.0",
     "electron-rebuild": "^1.7.3",
     "eslint": "^4.19.1",
@@ -54,6 +52,7 @@
     "gulp-clean-css": "^3.9.3",
     "gulp-htmlmin": "^4.0.0",
     "gulp-sass": "^3.2.1",
+    "style-loader": "^0.20.3",
     "url-loader": "^1.0.1",
     "webpack": "^4.4.1",
     "webpack-cli": "^2.0.13",
