--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "electron": "^1.8.4",
     "react": "^16.3.0",
-    "react-dom": "^16.3.0"
+    "react-dom": "^16.3.0",
+    "recharts": "^1.0.0-beta.10"
   },
   "scripts": {
     "dev": "node ./node_modules/concurrently/src/main.js \"npm run dev:main\" \"npm run dev:app\"",
