--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "electron": "^1.8.4",
     "react": "^16.3.0",
+    "react-color": "^2.14.1",
     "react-dom": "^16.3.0",
     "recharts": "^1.0.0-beta.10"
   },
