--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react": "^16.3.0",
     "react-color": "^2.14.1",
     "react-dom": "^16.3.0",
-    "recharts": "^1.0.0-beta.10"
+    "recharts": "^1.0.0-beta.10",
+    "xlsx": "^0.12.12"
   },
   "scripts": {
     "dev": "node ./node_modules/concurrently/src/main.js \"npm run dev:main\" \"npm run dev:app\"",
