--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,8 @@
 {
+    "extends": [
+        "eslint:recommended",
+        "plugin:react/recommended"
+    ],
     "parserOptions": {
         "ecmaVersion": 6,
         "ecmaFeatures": {
@@ -7,12 +11,14 @@
         },
         "sourceType": "module"
     },
-    "extends": "eslint:recommended",
     "env": {
         "node": true,
         "browser": true
     },
     "globals": {
         "M": true
+    },
+    "rules": {
+        "react/jsx-uses-vars": [2]
     }
 }
