--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "electron": "^1.8.4",
+    "prop-types": "^15.6.1",
     "react": "^16.3.0",
     "react-color": "^2.14.1",
     "react-dom": "^16.3.0",
