--- a/package.json
+++ b/package.json
@@ -16,25 +16,23 @@
   },
   "scripts": {
     "dev": "node ./node_modules/concurrently/src/main.js \"npm run dev:main\" \"npm run dev:app\"",
-    "dev:full": "node ./node_modules/concurrently/src/main.js \"npm run dev\" \"npm run sass:watch\"",
     "dev:rebuild": "npm run build && npm run dev",
     "dev:main": "node ./node_modules/electron/cli.js ./src",
     "dev:app": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --config webpack.config.app.js --mode=development",
     "build": "npm run clean:build && npm run build:main && npm run build:app",
     "build:main": "node ./node_modules/webpack/bin/webpack.js --config webpack.config.main.js --mode=production",
-    "build:app": "npm run sass:compile && node ./node_modules/concurrently/src/main.js \"npm run build:app:webpack\" \"npm run build:app:gulp\"",
+    "build:app": "node ./node_modules/concurrently/src/main.js \"npm run build:app:webpack\" \"npm run build:app:gulp\"",
     "build:app:webpack": "node ./node_modules/webpack/bin/webpack.js --config webpack.config.app.js --mode=production",
     "build:app:gulp": "node ./node_modules/gulp/bin/gulp.js assets",
     "start": "node ./node_modules/electron/cli.js ./build",
+    "dist": "npm run dist:current",
     "dist:current": "npm run build && npm run clean:dist && node ./node_modules/electron-packager/cli.js ./build budget-manager --out=dist",
     "dist:all": "node ./node_modules/electron-packager/cli.js ./build budget-manager --platform=all --out=dist --overwrite",
     "lint": "node ./node_modules/eslint/bin/eslint.js src/*/*.js",
-    "lint:airbnb": "node ./node_modules/eslint/bin/eslint.js -c .eslintrc.airbnb src/*/*.js",
-    "sass:compile": "node ./node_modules/gulp/bin/gulp.js sass",
-    "sass:watch": "node ./node_modules/gulp/bin/gulp.js sass-watch",
+    "lint:airbnb": "node ./node_modules/eslint/bin/eslint.js -c .eslintrc.airbnb src/*/*.js src/*/*.jsx",
+    "clean": "npm run clean:build && npm run clean:dist",
     "clean:build": "node ./node_modules/gulp/bin/gulp.js clean:build",
-    "clean:dist": "node ./node_modules/gulp/bin/gulp.js clean:dist",
-    "dist:test": "npx electron-builder --prepackaged=build"
+    "clean:dist": "node ./node_modules/gulp/bin/gulp.js clean:dist"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -53,9 +51,9 @@
     "file-loader": "^1.1.11",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.4.0",
-    "gulp-clean-css": "^3.9.3",
     "gulp-htmlmin": "^4.0.0",
-    "gulp-sass": "^3.2.1",
+    "node-sass": "^4.9.0",
+    "sass-loader": "^7.0.1",
     "style-loader": "^0.20.3",
     "url-loader": "^1.0.1",
     "webpack": "^4.4.1",
