Upgrade dellle dipendenze

--- a/package.json
+++ b/package.json
@@ -6,22 +6,22 @@
   "author": "lgcolella",
   "license": "MIT",
   "dependencies": {
-    "electron": "^1.8.4",
+    "electron": "^4.0.4",
     "prop-types": "^15.6.1",
     "react": "^16.3.0",
     "react-color": "^2.14.1",
     "react-dom": "^16.3.0",
     "recharts": "^1.0.0-beta.10",
-    "xlsx": "^0.12.12"
+    "xlsx": "^0.14.1"
   },
   "scripts": {
-    "dev": "node ./node_modules/concurrently/src/main.js \"npm run dev:main\" \"npm run dev:app\"",
+    "dev": "concurrently \"npm run dev:main\" \"npm run dev:app\"",
     "dev:rebuild": "npm run build && npm run dev",
     "dev:main": "node ./node_modules/electron/cli.js ./src",
     "dev:app": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --config webpack.config.app.js --mode=development",
     "build": "npm run clean:build && npm run build:main && npm run build:app",
     "build:main": "node ./node_modules/webpack/bin/webpack.js --config webpack.config.main.js --mode=production",
-    "build:app": "node ./node_modules/concurrently/src/main.js \"npm run build:app:webpack\" \"npm run build:app:gulp\"",
+    "build:app": "concurrently \"npm run build:app:webpack\" \"npm run build:app:gulp\"",
     "build:app:webpack": "node ./node_modules/webpack/bin/webpack.js --config webpack.config.app.js --mode=production",
     "build:app:gulp": "node ./node_modules/gulp/bin/gulp.js assets",
     "start": "node ./node_modules/electron/cli.js ./build",
@@ -35,28 +35,29 @@
     "clean:dist": "node ./node_modules/gulp/bin/gulp.js clean:dist"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "concurrently": "^3.5.1",
-    "css-loader": "^0.28.11",
-    "electron-packager": "^12.0.0",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.5",
+    "concurrently": "^4.1.0",
+    "css-loader": "^2.1.0",
+    "del": "^3.0.0",
+    "electron-packager": "^13.0.1",
     "electron-rebuild": "^1.7.3",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^16.1.0",
+    "eslint": "^5.13.0",
+    "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.10.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
-    "gulp": "^3.9.1",
-    "gulp-clean": "^0.4.0",
-    "gulp-htmlmin": "^4.0.0",
+    "file-loader": "^3.0.1",
+    "gulp": "^4.0.0",
+    "gulp-htmlmin": "^5.0.1",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
-    "style-loader": "^0.20.3",
+    "style-loader": "^0.23.1",
     "url-loader": "^1.0.1",
     "webpack": "^4.4.1",
-    "webpack-cli": "^2.0.13",
+    "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.1.1"
   }
 }
