--- a/.eslintrc
+++ b/.eslintrc
@@ -20,5 +20,10 @@
     },
     "rules": {
         "react/jsx-uses-vars": [2]
+    },
+    "settings": {
+        "react": {
+            "version": "^16.3.0"
+        }
     }
 }
